--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.18.0",
     "react-share": "^5.0.3"
   },
