--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.14.16",
     "bootswatch": "^5.3.3",
     "js-cookie": "^3.0.5",
+    "quill-markdown-shortcuts": "^0.0.10",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
