--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
     "@fullcalendar/interaction": "^6.1.11",
@@ -19,13 +19,15 @@
     "@fullcalendar/react": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
     "@mui/icons-material": "^5.15.12",
-    "@mui/material": "^5.14.16",
+    "@mui/material": "^5.16.4",
     "bootswatch": "^5.3.3",
+    "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "quill-markdown-shortcuts": "^0.0.10",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.18.0",
     "react-share": "^5.0.3"
