--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.4.0"
+    "mongodb": "^6.4.0",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "@types/node": "^20.11.24"
