--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.4.0",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.14"
   },
   "devDependencies": {
