--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/icalendar": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/list": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
@@ -22,9 +23,11 @@
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.16.4",
     "bootswatch": "^5.3.3",
+    "cal-parser": "^1.0.2",
     "date-fns": "^3.6.0",
     "datebook": "^8.0.1",
     "html-react-parser": "^5.1.12",
+    "ical.js": "^1.5.0",
     "js-cookie": "^3.0.5",
     "quill-markdown-shortcuts": "^0.0.10",
     "react": "^18.2.0",
